--- a/.github/workflows/gemini-automated-issue-triage.yml
+++ b/.github/workflows/gemini-automated-issue-triage.yml
@@ -36,10 +36,8 @@ jobs:
       (github.event_name == 'issues' ||
        github.event_name == 'workflow_dispatch' ||
        (github.event_name == 'issue_comment' &&
-       contains(github.event.comment.body, '@gemini-cli /triage') &&
-       (github.event.comment.author_association == 'OWNER' ||
-        github.event.comment.author_association == 'MEMBER' ||
-        github.event.comment.author_association == 'COLLABORATOR')))
+       contains(github.event.comment.body, '@gemini-cli /triage') 
+       ))
     timeout-minutes: 5
     runs-on: 'ubuntu-latest'
 
